--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title> MY WEBSITE</title>
-     </head>
-     <body>
-          <h1> welcome my website</h1>
-          <p>My friends op <br>op minecraft</p>
-    </body>
+  <head>
+    <title>MC Play Games</title>
+    <style>
+      body {
+        background-color: #111;
+        color: #fff;
+        text-align: center;
+        font-family: Arial, sans-serif;
+        padding: 50px;
+      }
+      h1 {
+        color: #00ff99;
+      }
+      a {
+        color: #00ffff;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Welcome to MC Play Games!</h1>
+    <p>We are OP in Minecraft. Stay tuned for updates!</p>
+    <a href="https://minecraft.net" target="_blank">Visit Minecraft</a>
+  </body>
 </html>
